# keleusma

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  flake.nix  llms.txt
.cargo/: config.toml
.cargo-husky/hooks/: pre-push
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: book.yml  ci.yml
book/: .gitignore  book.toml
book/assets/: language-switcher.js
book/ci/: verify_examples.py
book/po/: ja.po  messages.pot
book/src/: 01_what_keleusma_is.md  02_installing_and_running.md  03_first_complete_program.md  04_values_and_types.md  05_names_and_bindings.md  06_functions.md  07_making_decisions.md  08_bounded_repetition.md  09_pipeline.md  10_structs.md  11_enums.md  12_tuples_and_arrays.md  13_pattern_matching.md  14_multiheaded_functions.md  15_three_function_categories.md  16_yield.md  17_loop_function.md  18_data_segment.md  19_why_rejected.md  20_time_and_memory_budgets.md  21_generics_and_traits.md  22_newtypes_and_refinement.md  23_big_numbers.md  24_information_flow_labels.md  25_from_source_to_bytecode.md  26_signed_modules_and_hot_swap.md  27_piano_roll.md  28_song_playground.md  29_writing_a_song.md  30_song_roster.md  31_embedding_orientation.md  32_constructing_a_vm.md  33_registering_natives.md  34_coroutine_protocol.md  35_arena_sizing.md  36_loading_bytecode.md  37_hot_swap_host.md  38_cost_models.md  39_full_host.md  40_further_reading.md  (+16 more)
compiler/: Cargo.toml  MERGE_PLAN.md  MILESTONES.md  README.md
compiler/kel/: analyze.kel  body.kel  codegen.kel  lexer.kel  parse.kel  parser.kel  prelude.kel  reconstruct.kel  verify_datalayout.kel  verify_depth.kel  verify_structural.kel  verify_typed.kel  verify_yield.kel
compiler/src/: lib.rs  main.rs  selfhost.rs
compiler/tests/: fixed_point.rs  scaffold.rs  validator.rs  verify_datalayout.rs  verify_structural.rs  verify_typed.rs
docs/: DOCUMENTATION_STRATEGY.md  README.md
docs/architecture/: COMPILATION_PIPELINE.md  EXECUTION_MODEL.md  LANGUAGE_DESIGN.md  README.md  RUN_TASKS.md  SUB_COROUTINES.md  WIRE_FORMAT.md
docs/decisions/: BACKLOG.md  ENCODING_CAPACITY_BRIEF.md  P11_OPTION_E_PLAN.md  PRIORITY.md  README.md  RESOLVED.md  SECURITY_AUDIT_V0_2_1.md
docs/design/: GRAMMAR.md  README.md  STANDARD_LIBRARY.md  TYPE_SYSTEM.md
docs/extras/: ICON_PROMPT.md  README.md  SONG_3_SPEC.md  SONG_4_SPEC.md  SONG_5_SPEC.md  SONG_6_SPEC.md  (+3 more)
editors/: README.md
examples/: README.md  closure_as_arg.rs  closure_basic.rs  closure_capture.rs  closure_nested.rs  closure_recursive.rs  generic_identity.rs  generic_match.rs  generic_struct.rs  measured_wcet.rs  method_call.rs  monomorphize_generic_method.rs  narrow_runtime.rs  opaque_rust_string.rs  piano_roll.kel  piano_roll.rs  piano_roll_0.kel  piano_roll_1.kel  piano_roll_2.kel  regenerate_zero_copy_bytecode.rs  string_ops.rs  struct_method_dispatch.rs  target_aware_compile.rs  wcmu_attestation.rs  wcmu_basic.rs  wcmu_rejection.rs  yield_error.rs  zero_copy_demo.kel  zero_copy_include_bytes.rs
examples/rtos/: Cargo.toml  MANUAL.md  README.md  SPEC.md  build.rs  memory.x  rust-toolchain.toml
examples/rtos/.cargo/: config.toml
examples/rtos/scripts/: event_listener.kel  faulty.kel  heartbeat.kel  led.kel  prelude.kel  sensor.kel
examples/rtos/src/: cost_model.rs  kernel.rs  lib.rs  natives.rs  setup.rs
examples/rtos/src/platform/: mod.rs  std.rs  stm32n6570_dk.rs
keleusma-arena/: CHANGELOG.md  Cargo.toml  README.md
keleusma-arena/examples/: basic.rs  budget_check.rs  epoch_handle.rs  frame_loop.rs  mixed_allocator.rs
keleusma-arena/src/: lib.rs
keleusma-bench/: CHANGELOG.md  Cargo.toml  README.md
keleusma-bench/measured_cost_models/: README.md  aarch64_apple_darwin.rs  thumbv8m_main_none_eabihf.rs
keleusma-bench/src/: counter.rs  lib.rs  main.rs
keleusma-cli/: CHANGELOG.md  Cargo.toml  README.md
keleusma-cli/examples/: hello.kel
keleusma-cli/src/: duration.rs  main.rs  strict_mode.rs
keleusma-cli/src/runtasks/: manifest.rs  mod.rs  scheduler.rs  signals.rs
keleusma-cli/tests/: repl.rs  run_memory.rs  secure_deploy.rs
keleusma-lsp/: Cargo.toml  README.md
keleusma-lsp/src/: main.rs
keleusma-macros/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
keleusma-macros/src/: lib.rs
keleusma-piano-roll/: Cargo.toml  README.md
keleusma-piano-roll/src/: main.rs
keleusma-wasm/: Cargo.toml  README.md
keleusma-wasm/src/: lib.rs
keleusma-wasm/www/: index.html
scripts/: check-md-links.kel  check-md-links.sh  fast-check.sh  gen-book-instruction-set.py  merge-to-trunk.sh  release-gate.sh  verify.sh  worktree.sh
src/: address.rs  arena.rs  ast.rs  audio_natives.rs  bytecode.rs  compiler.rs  debug_meta.rs  encryption.rs  flat_value.rs  float.rs  interval.rs  kstring.rs  layout_pass.rs  lexer.rs  lib.rs  marshall.rs  monomorphize.rs  opaque.rs  parser.rs  selfhost_host.rs  shared_buf.rs  target.rs  text_size.rs  token.rs  typecheck.rs  utility_natives.rs  value_layout.rs  verify.rs  verify_typed.rs  visitor.rs  vm.rs  wire_format.rs  word.rs  zero_value.rs
tests/: aux_arena_bytes.rs  big_number_arithmetic.rs  block_form_statements.rs  c11_array_length.rs  c7_loop_bound_soundness.rs  const_generics.rs  const_string_eq.rs  flat_arena_construct.rs  flat_float_eq.rs  flat_ref_decode.rs  flat_ref_tuple.rs  flat_text.rs  flat_text_persistent.rs  flat_text_rodata_yield.rs  flat_text_stale.rs  flat_text_yield.rs  for_limit.rs  frontend_resource_bounds.rs  generic_methods.rs  kstring_boundary.rs  marshall.rs  multiword.rs  narrow_vm.rs  native_composite_return.rs  opaque.rs  option_flat.rs  persistent_data.rs  poc_newarray_underflow.rs  require_directive.rs  rogue_scripts.rs  selfhost_body.rs  selfhost_codegen.rs  selfhost_lexer.rs  selfhost_parse.rs  selfhost_parser.rs  selfhost_pipeline.rs  struct_field_index.rs  typed_codegen.rs  typed_conformance.rs  wcet_native_attest.rs  (+4 more)
tools/: README.md  cloc.lang
(+191 files in other folders)
