[workspace]
members = ["keleusma-macros", "keleusma-arena", "keleusma-bench", "keleusma-cli"]

[package]
name = "keleusma"
version = "0.1.1"
edition = "2024"
description = "Total Functional Stream Processor with definitive WCET and WCMU verification, targeting no_std + alloc embedded scripting"
license = "0BSD"
keywords = ["scripting", "bytecode", "no-std", "wcet", "embedded"]
categories = ["no-std", "compilers", "embedded"]
homepage = "https://github.com/sgeos/keleusma"
repository = "https://github.com/sgeos/keleusma"
documentation = "https://docs.rs/keleusma"
readme = "README.md"
rust-version = "1.88"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["compile", "verify", "floats"]

# Enables the `Float` type, the `Op::IntToFloat` and
# `Op::FloatToInt` opcodes, the `Value::Float` and
# `ConstValue::Float` variants, the f64 arithmetic arms in the
# VM's binary-operator dispatch, the float literal in the lexer,
# and the `KeleusmaType` impl for `f64`. With the feature off,
# float literals and the `Float` type are rejected at lex/parse
# time and every float-related runtime variant is compiled away.
# Hosts targeting flash-constrained embedded environments that
# only need integer and fixed-point arithmetic disable this
# feature to drop the soft-float `compiler_builtins` routines
# (`__divdf3`, `__adddf3`, `__muldf3`) from the runtime image.
# Default on for backward compatibility.
floats = []

# Enables the source-to-bytecode pipeline. With the feature on,
# the public modules `lexer`, `parser`, `typecheck`,
# `monomorphize`, `compiler`, `ast`, `token`, and `visitor` are
# available. With the feature off, the runtime accepts only
# precompiled bytecode loaded through `Module::from_bytes` or
# `Vm::view_bytes_zero_copy`. Hosts that ship precompiled
# bytecode and want a smaller runtime binary leave this feature
# off and rely on a build-time compile step. Default on for
# backward compatibility.
compile = []

# Enables the load-time and compile-time verifier. With the
# feature on, `verify::verify`, `verify::wcet_stream_iteration`,
# `verify::wcmu_stream_iteration`, `verify::module_wcmu`, the
# WCMU text-size tracking pass, and the structural checks run
# inside `Vm::new` are available. The compiler also invokes the
# verifier at the end of `compile_with_target` to populate the
# bytecode header's WCET and WCMU fields. With the feature off,
# all of that machinery is absent. `Vm::new` becomes equivalent
# to `Vm::new_unchecked` from the caller's perspective. Default
# on for backward compatibility.
verify = []

# Enables surface support for the `Text` type, string literals,
# f-string interpolation, the bundled string utility natives
# (`to_string`, `concat`, `slice`, `length` against `Text`), and
# the `Op::Add` text concatenation branch. Default off. Keleusma's
# value proposition is bounded execution time and memory for stream
# processors. Text manipulation is not in that value proposition;
# applications that need string work should register host-supplied
# native functions and accept the host-attested WCMU bound. Hosts
# that want script-side string concatenation, f-strings, and the
# bundled utility natives must enable this feature explicitly.
text = []

# Enables the `stddsl::Shell` library bundle. Requires `std` for
# `std::env` and `std::process::Command`. Embedded `no_std` hosts
# leave this feature off; the Shell library is not compiled.
shell = []

# Enables the SDL3 audio piano-roll example. Pulls in SDL3 (built
# from source via CMake) and is therefore opt-in.
sdl3-example = ["dep:sdl3"]

[dependencies]
libm = "0.2"
keleusma-macros = { path = "keleusma-macros", version = "0.1.0" }
keleusma-arena = { version = "0.3", path = "keleusma-arena", features = ["alloc"] }
allocator-api2 = { version = "0.4", default-features = false, features = ["alloc"] }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
sdl3 = { version = "0.18", features = ["build-from-source-static"], optional = true }

[[example]]
name = "piano_roll"
required-features = ["compile", "verify", "sdl3-example", "text"]

[[example]]
name = "string_ops"
required-features = ["compile", "verify", "text"]

[[example]]
name = "opaque_rust_string"
required-features = ["compile", "verify", "text"]

[[example]]
name = "rogue"
path = "examples/rogue/main.rs"
required-features = ["compile", "verify", "sdl3-example", "text"]

[[example]]
name = "generic_identity"
required-features = ["compile", "verify"]

[[example]]
name = "generic_match"
required-features = ["compile", "verify"]

[[example]]
name = "generic_struct"
required-features = ["compile", "verify"]

[[example]]
name = "method_call"
required-features = ["compile", "verify"]

[[example]]
name = "monomorphize_generic_method"
required-features = ["compile", "verify"]

[[example]]
name = "regenerate_zero_copy_bytecode"
required-features = ["compile", "verify"]

[[example]]
name = "struct_method_dispatch"
required-features = ["compile", "verify"]

[[example]]
name = "narrow_runtime"
required-features = ["compile", "verify"]

[[example]]
name = "target_aware_compile"
required-features = ["compile", "verify"]

[[example]]
name = "wcmu_attestation"
required-features = ["compile", "verify"]

[[example]]
name = "wcmu_basic"
required-features = ["compile", "verify"]

[[example]]
name = "wcmu_rejection"
required-features = ["compile", "verify"]

[[example]]
name = "yield_error"
required-features = ["compile", "verify"]

# zero_copy_include_bytes runs precompiled bytecode and therefore
# works under any feature combination. No required-features.
[[example]]
name = "zero_copy_include_bytes"
