[workspace]
members = ["keleusma-macros", "keleusma-arena", "keleusma-bench", "keleusma-cli"]

# Faster dev and test compile/link by emitting only line tables instead of full
# debug info. Backtraces keep file and line numbers (panics and test failures
# still point at source); the dev/test loop does not need full DWARF. The `test`
# profile inherits this from `dev`. Set in the workspace root so it applies to
# every crate. Release builds are unaffected.
[profile.dev]
debug = "line-tables-only"

[package]
name = "keleusma"
version = "0.2.2"
edition = "2024"
publish = ["crates-io"]
description = "Total Functional Stream Processor with definitive WCET and WCMU verification, targeting no_std + alloc embedded scripting"
license = "0BSD"
keywords = ["scripting", "bytecode", "no-std", "wcet", "embedded"]
categories = ["no-std", "compilers", "embedded"]
homepage = "https://github.com/sgeos/keleusma"
repository = "https://github.com/sgeos/keleusma"
documentation = "https://docs.rs/keleusma"
readme = "README.md"
rust-version = "1.88"
# Files and directories excluded from the published crates.io
# tarball. Each entry is content that serves contributors or
# maintainers rather than downstream embedders.
#   - editors/ holds editor-specific syntax highlighters and
#     file-type detection (vim, future vscode/sublime/emacs).
#   - tools/ holds project-side development tooling such as the
#     cloc language definition.
#   - tmp/ and secret/ each carry only a `.gitkeep` marker so the
#     directories remain present in fresh clones; the marker has
#     no value to a consumer downloading the tarball.
exclude = [
    "editors/",
    "tools/",
    "tmp/",
    "secret/",
    # Internal audit narrative and process logs are kept out of the published
    # tarball (audit 8859acb publication review); user-facing docs/reference/,
    # docs/spec/, docs/architecture/, and docs/standard/ still ship.
    "docs/decisions/",
    "docs/process/",
    # Forward development planning is contributor material, not consumer
    # documentation (release audit v0.2.1 tarball-contents decision).
    "docs/roadmap/",
    # The learning guide is now the mdbook at book/; it is consumed as the
    # rendered, hosted book (linked from the README), not as loose markdown in
    # the crate tarball. Excluding it keeps the tarball small; the book source,
    # its build output, and the translation files all stay out.
    "book/",
    # The self-hosted compiler subproject (the V0.3.0 goal) is a standalone
    # package with its own detached workspace; it is developed alongside the
    # V0.2.x line but is not part of the runtime a downstream embedder consumes.
    "compiler/",
    # AI-agent and contributor operating instructions, not consumer
    # documentation (release audit v0.2.1: named as iffy for the tarball).
    "CLAUDE.md",
    "AGENTS.md",
]

[package.metadata.docs.rs]
# Render docs.rs against the full feature surface so consumers see
# the `signatures`, `encryption`, and `shell` doc surface alongside
# the defaults. `encryption` is additive on `signatures` and carries
# the V0.2.1 `crate::encryption` module that the wire-format docs
# link to. The `narrow-word-*` / `narrow-address-*` / `narrow-float-32`
# features are mutually-exclusive parametric-runtime selectors; do
# not enable them at the docs.rs build (they conflict with each
# other and with the default 64-bit runtime that the public APIs
# document).
all-features = false
features = ["compile", "verify", "floats", "signatures", "encryption", "shell"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["compile", "verify", "floats"]

# Enables the `Float` type, the `Op::IntToFloat` and
# `Op::FloatToInt` opcodes, the `Value::Float` and
# `ConstValue::Float` variants, the f64 arithmetic arms in the
# VM's binary-operator dispatch, the float literal in the lexer,
# and the `KeleusmaType` impl for `f64`. With the feature off,
# float literals and the `Float` type are rejected at lex/parse
# time and every float-related runtime variant is compiled away.
# Hosts targeting flash-constrained embedded environments that
# only need integer and fixed-point arithmetic disable this
# feature to drop the soft-float `compiler_builtins` routines
# (`__divdf3`, `__adddf3`, `__muldf3`) from the runtime image.
# Default on for backward compatibility.
floats = []

# Enables the source-to-bytecode pipeline. With the feature on,
# the public modules `lexer`, `parser`, `typecheck`,
# `monomorphize`, `compiler`, `ast`, `token`, and `visitor` are
# available. With the feature off, the runtime accepts only
# precompiled bytecode loaded through `Module::from_bytes` or
# `Vm::view_bytes_zero_copy`. Hosts that ship precompiled
# bytecode and want a smaller runtime binary leave this feature
# off and rely on a build-time compile step. Default on for
# backward compatibility.
compile = []

# Enables the load-time and compile-time verifier. With the
# feature on, `verify::verify`, `verify::wcet_stream_iteration`,
# `verify::wcmu_stream_iteration`, `verify::module_wcmu`, the
# WCMU text-size tracking pass, and the structural checks run
# inside `Vm::new` are available. The compiler also invokes the
# verifier at the end of `compile_with_target` to populate the
# bytecode header's WCET and WCMU fields. With the feature off,
# all of that machinery is absent. `Vm::new` becomes equivalent
# to `Vm::new_unchecked` from the caller's perspective. Default
# on for backward compatibility.
verify = []

# Enables the `stddsl::Shell` library bundle. Requires `std` for
# `std::env` and `std::process::Command`. Embedded `no_std` hosts
# leave this feature off; the Shell library is not compiled.
shell = []

# Enables compiled-module signing and signature verification at
# load time. Adds `ed25519-dalek` as a dependency for the Ed25519
# scheme (the only scheme V0.2.0 ships). With the feature off, the
# `signed` surface keyword is still recognized by the parser (so
# source files remain portable across feature configurations), but
# the resulting flag is rejected at load time because no
# verifier-side scheme is compiled in. Future scheme additions
# extend the wire-format `scheme_id` byte without requiring an ABI
# break.
signatures = ["dep:ed25519-dalek"]

# Enables compiled-module encryption and decryption at load time.
# Adds `x25519-dalek` for asymmetric key agreement, `aes-gcm` for
# authenticated encryption, `hkdf` for symmetric key derivation,
# and `sha2` for the recipient-key fingerprint. The feature is
# additive on top of `signatures`: encrypted modules are also
# signed because the signature covers the encrypted body and is
# what authenticates the artefact's origin. With the feature off,
# encrypted bytecode is rejected at load time with a clear
# diagnostic. Default off because the encryption crypto stack adds
# meaningful binary footprint that flash-constrained embedded hosts
# do not need unless they actually require encrypted delivery.
encryption = ["signatures", "dep:x25519-dalek", "dep:aes-gcm", "dep:hkdf", "dep:sha2"]

# Enables the SDL3 audio piano-roll example. Pulls in SDL3 (built
# from source via CMake) and is therefore opt-in.
sdl3-example = ["dep:sdl3"]

# Binary build's framing-level upper bound on bytecode widths
# (B16 step 12). The `narrow-word-*`, `narrow-address-*`, and
# `narrow-float-32` features each lower one of the global
# `RUNTIME_WORD_BITS_LOG2`, `RUNTIME_ADDRESS_BITS_LOG2`, and
# `RUNTIME_FLOAT_BITS_LOG2` constants in `bytecode.rs`. The
# "narrowest wins" rule applies if multiple narrowing features
# are enabled in the same dimension (the narrowest selection is
# used; this preserves Cargo's additive-features semantics).
# With no narrowing feature enabled, the constants default to 6
# (i64, u64, f64), admitting any bytecode the wire format allows.
#
# Hosts that ship only a narrow `GenericVm<W, A, F>` instance can
# enable the matching narrowing features so the framing-level
# check rejects wider bytecode before deserialization, instead of
# deferring rejection to the per-Vm load-time check. The Vm-level
# check at `<W as Word>::BITS_LOG2` continues to apply on top.
#
# The features do not change opcode dispatch or the parametric
# `Vm` shape. They only change what bytecode the binary's
# `Module::access_bytes` and `Module::from_bytes` admit and what
# widths `Target::host()` reports.
narrow-word-8 = []
narrow-word-16 = []
narrow-word-32 = []
narrow-address-8 = []
narrow-address-16 = []
narrow-address-32 = []
narrow-float-32 = []

[dependencies]
libm = "0.2"
keleusma-macros = { path = "keleusma-macros", version = "0.2.2" }
keleusma-arena = { version = "0.3.1", path = "keleusma-arena", features = ["alloc"] }
allocator-api2 = { version = "0.4", default-features = false, features = ["alloc"] }
rkyv = { version = "0.8", default-features = false, features = ["alloc", "bytecheck"] }
# Ed25519 signing and verification for the optional `signatures`
# feature. `no_std + alloc` configuration matches the rest of the
# crate. `zeroize` is enabled so secret-bearing values clear their
# memory on drop. `rand_core` is intentionally absent because the
# crate consumes pre-existing signing keys rather than generating
# them; key generation is host-side responsibility.
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize"], optional = true }
# X25519 elliptic-curve Diffie-Hellman for the optional `encryption`
# feature. Companion to `ed25519-dalek` in the same dalek crate
# family. `static_secrets` exposes the static-private-key constructor
# the runtime needs to load the host's stable decryption key.
# `zeroize` clears the shared-secret material on drop.
x25519-dalek = { version = "2", default-features = false, features = ["alloc", "zeroize", "static_secrets"], optional = true }
# AES-256-GCM authenticated encryption for the body cipher. `no_std`
# compatible with the `alloc` feature; pure-Rust implementation
# acceptable for the targets V0.2.x supports.
aes-gcm = { version = "0.10", default-features = false, features = ["alloc", "aes"], optional = true }
# HKDF-SHA-256 derivation of the AES key and nonce from the X25519
# shared secret. The `hkdf` crate is no_std-compatible and pulls in
# `sha2` transitively.
hkdf = { version = "0.12", default-features = false, optional = true }
# SHA-256 for the recipient-key fingerprint and for HKDF. Pure-Rust
# implementation suitable for no_std + alloc.
sha2 = { version = "0.10", default-features = false, optional = true }
sdl3 = { version = "0.18", features = ["build-from-source-static"], optional = true }

[dev-dependencies]
# Installs the version-controlled git hooks under `.cargo-husky/hooks/`
# into `.git/hooks/` the next time the dev-dependencies compile (for
# example on `cargo test`). `user-hooks` disables cargo-husky's built-in
# hooks and uses the project's own pre-push hook, which mirrors the
# `CONTRIBUTING.md` pre-pull-request checklist (test, fmt, clippy, doc).
# Dev-only: not part of the published crate and never pulled by
# downstream consumers.
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[[example]]
name = "piano_roll"
required-features = ["compile", "verify", "sdl3-example"]

[[example]]
name = "string_ops"
required-features = ["compile", "verify"]

[[example]]
name = "measured_wcet"
required-features = ["compile", "verify"]

[[example]]
name = "opaque_rust_string"
required-features = ["compile", "verify"]

[[example]]
name = "rogue"
path = "examples/rogue/main.rs"
required-features = ["compile", "verify", "sdl3-example"]

[[example]]
name = "generic_identity"
required-features = ["compile", "verify"]

[[example]]
name = "generic_match"
required-features = ["compile", "verify"]

[[example]]
name = "generic_struct"
required-features = ["compile", "verify"]

[[example]]
name = "method_call"
required-features = ["compile", "verify"]

[[example]]
name = "monomorphize_generic_method"
required-features = ["compile", "verify"]

[[example]]
name = "struct_method_dispatch"
required-features = ["compile", "verify"]

[[example]]
name = "narrow_runtime"
required-features = ["compile", "verify"]

[[example]]
name = "target_aware_compile"
required-features = ["compile", "verify"]

[[example]]
name = "wcmu_attestation"
required-features = ["compile", "verify"]

[[example]]
name = "wcmu_basic"
required-features = ["compile", "verify"]

[[example]]
name = "wcmu_rejection"
required-features = ["compile", "verify"]

[[example]]
name = "yield_error"
required-features = ["compile", "verify"]

# zero_copy_include_bytes compiles the demonstration script
# at runtime and exercises the zero-copy view path. Requires
# the compile pipeline since the bytecode is produced
# on-the-fly. Hosts that ship precompiled bytecode through
# `include_bytes!` use the build.rs pattern in
# `examples/rtos/build.rs`.
[[example]]
name = "zero_copy_include_bytes"
required-features = ["compile", "verify"]
