[package]
name = "keleusma-arena"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Dual-end bump-allocated arena for embedded Rust with fixed-size storage, constant-time allocation, and a generic memory budget contract"
license = "0BSD"
repository = "https://github.com/sgeos/keleusma"
homepage = "https://github.com/sgeos/keleusma/tree/main/keleusma-arena"
readme = "README.md"
keywords = ["arena", "allocator", "no-std", "embedded", "bump"]
categories = ["memory-management", "no-std", "embedded"]

[features]
default = ["alloc"]
# Enables the heap-allocating constructor `Arena::with_capacity`. The
# static-buffer constructor `Arena::from_static_buffer` and the unsafe
# `Arena::from_buffer_unchecked` work without this feature, supporting
# `core`-only targets that have no global allocator. Enabling this
# feature also enables `allocator-api2`'s `alloc` feature, which
# provides the arena-aware `Vec` and similar collection types used in
# tests and downstream code.
alloc = ["allocator-api2/alloc"]

[dependencies]
allocator-api2 = { version = "0.4", default-features = false }

[package.metadata.docs.rs]
# Document every feature so feature-gated APIs render. The
# `docsrs` cfg activates `#[doc(cfg(...))]` annotations on items
# that are only available under specific features.
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
