[package]
name = "keleusma-bench"
version = "0.2.1"
edition = "2024"
publish = ["crates-io"]
rust-version = "1.88"
description = "Cost-model calibration tool for Keleusma. Measures pipelined cycles per opcode on a host CPU and emits a CostModel implementation suitable for the runtime's WCET analysis."
license = "0BSD"
homepage = "https://github.com/sgeos/keleusma"
repository = "https://github.com/sgeos/keleusma"
documentation = "https://docs.rs/keleusma-bench"
readme = "README.md"
keywords = ["benchmark", "wcet", "cycle", "calibration", "bytecode"]
categories = ["development-tools::profiling", "embedded"]

[package.metadata.docs.rs]
# Render docs.rs with the default `std + floats` configuration so
# the host CLI surface and the f64-aware specs are visible.
features = ["std", "floats"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
# The `std` feature gates the host-side CLI binary and the
# environment-variable override for the CPU clock assumption.
# When disabled, the crate is `no_std + alloc`-compatible and is
# consumed by the Cortex-M bench binary at
# `examples/rtos/src/bin/bench_n6.rs`. The default enables `std`
# and pulls in `floats` on the underlying keleusma runtime, since
# the host bench measures the full opcode surface including float
# ops.
default = ["std", "floats"]
std = []
floats = ["keleusma/floats"]

[dependencies]
# `default-features = false` keeps the bench crate consumable from
# bare-metal binaries. The host CLI re-enables features through
# the default `std` + `floats` feature on this crate.
keleusma = { path = "..", version = "0.2", default-features = false }
keleusma-arena = { path = "../keleusma-arena", version = "0.3.1" }
# `libm` provides f64 math (ceil) under no_std. The host build also
# uses libm rather than std::f64 so the implementation is identical
# across targets.
libm = "0.2"

[[bin]]
name = "keleusma-bench"
path = "src/main.rs"
required-features = ["std"]

[lib]
path = "src/lib.rs"
