[package]
name = "keleusma-cli"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
description = "Standalone command-line frontend for Keleusma. Provides a script runner, a bytecode compiler, and an interactive REPL so users can work with Keleusma scripts without writing any Rust host code."
license = "0BSD"
homepage = "https://github.com/sgeos/keleusma"
repository = "https://github.com/sgeos/keleusma"
documentation = "https://docs.rs/keleusma-cli"
readme = "README.md"
keywords = ["scripting", "bytecode", "repl", "wcet", "embedded"]
categories = ["command-line-utilities", "compilers"]

[dependencies]
# Enable the `text` feature on the runtime so the CLI can parse and
# execute scripts that use string literals, the `Text` type, and the
# bundled string utility natives. The library default is text-off
# (Keleusma's value proposition does not centre on string handling);
# the CLI opts in because users expect the runner and REPL to handle
# strings.
keleusma = { path = "..", version = "0.2", features = ["shell", "signatures"] }
keleusma-arena = { path = "../keleusma-arena", version = "0.3" }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[[bin]]
name = "keleusma"
path = "src/main.rs"
# Suppress rustdoc for the bin to avoid the
# https://github.com/rust-lang/cargo/issues/6313 collision between the
# `keleusma` lib (in the parent crate) and the `keleusma` bin (here).
# Both targets would otherwise emit to target/doc/keleusma/index.html.
# The bin's user-facing documentation lives in keleusma-cli/README.md;
# the lib's docs remain on docs.rs.
doc = false
