[package]
name = "keleusma-cli"
version = "0.2.1"
edition = "2024"
publish = ["crates-io"]
rust-version = "1.88"
description = "Standalone command-line frontend for Keleusma. Provides a script runner, a bytecode compiler, and an interactive REPL so users can work with Keleusma scripts without writing any Rust host code."
license = "0BSD"
homepage = "https://github.com/sgeos/keleusma"
repository = "https://github.com/sgeos/keleusma"
documentation = "https://docs.rs/keleusma-cli"
readme = "README.md"
keywords = ["scripting", "bytecode", "repl", "wcet", "embedded"]
categories = ["command-line-utilities", "compilers"]

[package.metadata.docs.rs]
# The CLI is a binary; docs.rs renders only the lib surface if any.
# The crate has no lib target, so docs.rs has minimal content here.
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Enable the `text` feature on the runtime so the CLI can parse and
# execute scripts that use string literals, the `Text` type, and the
# bundled string utility natives. The library default is text-off
# (Keleusma's value proposition does not centre on string handling);
# the CLI opts in because users expect the runner and REPL to handle
# strings.
keleusma = { path = "..", version = "0.2", features = ["shell", "signatures", "encryption"] }
keleusma-arena = { path = "../keleusma-arena", version = "0.3" }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "rand_core"] }
# X25519 for the encryption gate at the CLI. The signing keypair
# (Ed25519) and the encryption keypair (X25519) are distinct; the
# CLI carries both so operators can generate either at the keygen
# step and the run subcommand can decrypt artefacts at execution
# time using a host-managed decryption-key store.
x25519-dalek = { version = "2", default-features = false, features = ["alloc", "static_secrets"] }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
# TOML parsing for the run-tasks manifest. Serde is used only for
# deserialisation of the structured manifest schema; no compile-time
# code generation beyond what `serde_derive` already produces.
toml = { version = "0.8", default-features = false, features = ["parse"] }
serde = { version = "1", default-features = false, features = ["std", "derive"] }
# Cross-platform signal handling for the run-tasks scheduler. The
# crate is a thin layer over each platform's native facility:
# sigaction(2) on Unix-likes (Linux, FreeBSD, OpenBSD, macOS) and
# SetConsoleCtrlHandler on Windows. The runner uses it for SIGINT,
# SIGTERM, and SIGHUP; on Windows the Unix-only signals are stubbed.
signal-hook = { version = "0.3", default-features = false }

[[bin]]
name = "keleusma"
path = "src/main.rs"
# Suppress rustdoc for the bin to avoid the
# https://github.com/rust-lang/cargo/issues/6313 collision between the
# `keleusma` lib (in the parent crate) and the `keleusma` bin (here).
# Both targets would otherwise emit to target/doc/keleusma/index.html.
# The bin's user-facing documentation lives in keleusma-cli/README.md;
# the lib's docs remain on docs.rs.
doc = false
